--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,50 @@
+aioredis==1.2.0
+asgiref==2.3.2
+asn1crypto==0.24.0
 astroid==2.1.0
+async-timeout==3.0.1
+attrs==19.1.0
+autobahn==19.8.1
+Automat==0.7.0
 autopep8==1.4.3
 certifi==2018.11.29
-chardet==3.0.4
-defusedxml==0.5.0
-Django==2.1.5
-django-allauth==0.38.0
-idna==2.8
-isort==4.3.4
-lazy-object-proxy==1.3.1
+cffi==1.12.3
 channels==2.1.5
 channels-redis==2.3.1
+chardet==3.0.4
+constantly==15.1.0
+cryptography==2.7
+daphne==2.3.0
+defusedxml==0.5.0
+dj-database-url==0.5.0
+Django==2.1.5
+django-allauth==0.38.0
+django-crispy-forms==1.7.2
+gunicorn==19.9.0
+hiredis==1.0.0
+hyperlink==19.0.0
+idna==2.8
+incremental==17.5.0
+isort==4.3.4
+lazy-object-proxy==1.3.1
 mccabe==0.6.1
+msgpack==0.5.6
 oauthlib==2.1.0
 pep8==1.7.1
 Pillow==5.3.0
 pycodestyle==2.4.0
+pycparser==2.19
+PyHamcrest==1.9.0
 pylint==2.2.2
 python3-openid==3.1.0
 pytz==2018.7
 requests==2.21.0
 requests-oauthlib==1.0.0
 six==1.12.0
+sqlparse==0.3.0
+Twisted==19.2.1
+txaio==18.8.1
 typed-ast==1.1.0
 urllib3==1.24.1
 wrapt==1.10.11
-django-crispy-forms==1.7.2
+zope.interface==4.6.0
