--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,9 @@ defusedxml==0.5.0
 dj-database-url==0.5.0
 Django==2.1.5
 django-allauth==0.38.0
+django-appconf==1.0.3
 django-crispy-forms==1.7.2
+django-tabbed-admin==1.0.4
 gunicorn==19.9.0
 hiredis==1.0.0
 hyperlink==19.0.0
@@ -31,6 +33,7 @@ mccabe==0.6.1
 msgpack==0.5.6
 oauthlib==2.1.0
 pep8==1.7.1
+pilkit==2.0
 Pillow==5.3.0
 pycodestyle==2.4.0
 pycparser==2.19
@@ -48,6 +51,3 @@ typed-ast==1.1.0
 urllib3==1.24.1
 wrapt==1.10.11
 zope.interface==4.6.0
-
-psycopg2==2.7.1
-whitenoise==3.2.2
