--- a/requirements.txt
+++ b/requirements.txt
@@ -52,5 +52,9 @@ urllib3==1.24.1
 wrapt==1.10.11
 zope.interface==4.6.0
 
+
+dj-database-url==0.4.1
+Django==1.10.2
+gunicorn==19.6.0
 psycopg2==2.6.2
 whitenoise==3.2.2
